# Multiverse32

./: CMakeLists.txt  LICENSE.txt  README_MACOS_INTEGRATION.md  build.sh  create_icon.py  create_icon.sh  readme.md  run_app.sh  win32_compat.cpp  win32_compat.h  win32_hello.cpp
Resources/: Info.plist  Multiverse32.icns
